--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,5 +3,9 @@ const today = new Date()
 ---
 
 <footer class='flex justify-center items-center w-full px-16 h-28 border-t-2'>
-	&copy; {today.getFullYear()} Your Name. All rights reserved.
+	&copy; {today.getFullYear()} Made with ❤️ by Öslar based on the template of&nbsp;<a
+		href='https://github.com/danielcgilibert/blog-template'
+	>
+		danielcgilibert.</a
+	>
 </footer>
